[package]
name = "skymask-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "skymask_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23"
skymask-rs = { git = "https://github.com/HellOwhatAs/Skymask-rs.git", rev = "9c8e97eb2d739d19249780e5025fc4387f912a50" }
kdtree = "0.7.0"
ordered-float = "4.6.0"
rangemap = "1.5.1"
rayon = "1.10.0"